--- a/style.css
+++ b/style.css
@@ -1,9 +1,15 @@
 .container {
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 10px;
+    align-items: center;
 }
 .container div {
-    width: 20px;
-    height: 20px;
+    display:flex;
+    flex-direction: row;
+    gap: 10px;
+}
+.container div div {
+    height: 30px;
+    width: 30px;
 }
